--- a/index.css
+++ b/index.css
@@ -1,58 +1,100 @@
 ﻿body {
+    display:grid;
+    grid-template-areas: ". header header header header ."
+                                  ". section section section section ."
+                                  ". main main main aside ."
+                                  ". content content content content ."
+                                  ". footer footer footer footer .";
+    grid-template-columns:10% 10% 20% 30% 20% 10%;
 }
-
 header {
+    grid-area: header;
     display: flex;
 }
-
 header nav {
-        display: flex;
-        margin-left: auto;
-        margin-right: 5em;
+    display: flex;
+    margin-left: auto;
+    margin-right: 5em;
     }
-
-        header nav p {
-            padding: 0px 25px;
-        }
-
-    header a {
-        text-decoration: none;
-        color: black;
+header nav p {
+    padding: 0px 25px;
+ }
+header a {
+    text-decoration: none;
+    color: black;
+}
+header nav p:hover {
+    border-top: 2px solid #0082ff;
+    color: #0082ff;
+ }
+section{
+    grid-area:section
+}
+section span input {
+    background-color: #0082ff;
+    color:white;
     }
-
-    header nav p:hover {
-        border-top: 2px solid #0082ff;
-        color: #0082ff;
-    }
-
-    header nav a:visited {
-        color: blue;
-    }
-
 section nav {
     display: flex;
     align-items: baseline;
 }
-
-    section nav p {
-        padding: 0px 15px;
-        margin: 0px 5px;
-        border: 2px solid #F2F2F2;
-        border-radius: 15px 15px;
-    }
-
-        section nav p img {
-            display: flex;
-            flex-direction: row;
-            border: 2px solid #DEEBFF;
-            background-color: #DEEBFF;
-        }
-
+section nav p {
+    display:flex;
+    padding: 0px 15px;
+    margin: 0px 5px;
+    border: 2px solid #F2F2F2;
+    border-radius: 15px 15px;
+}
+section nav p img {
+    display: flex;
+    margin-left: -18px;
+    margin-right:10px;
+    flex-direction: row;
+    border: 2px solid #DEEBFF;
+    border-radius:  50%;
+    background-color: #DEEBFF;
+}
+main {
+    background-color: #F2F2F2;
+    display:block;
+    grid-area: main;
+    max-height:700px;
+    border-radius:18px 18px;
+}
+aside{
+    grid-area:aside;
+}
+footer{
+    grid-area:footer;
+}
+content{
+    grid-area:content;
+}
 .card {
     color: black;
-    background-color: #F2F2F2;
+    background-color: white;
+    border: 8px solid white;
+    border-radius: 10px 10px;
+    box-shadow: 2px 2px#DEEBFF;
 }
-
+.pointeur {
+    border: 2px solid #F2F2F2;
+}
+.pointeur input {
+    border-radius: 15px 15px;
+}
 .card, a {
     text-decoration: none;
+}
+.checked {
+    color: #0082ff;
+}
+.block_un{
+    display:flex;
+    justify-content:space-around;
+}
+.block_deux{
+    margin-top:20px;
+    display:flex;
+    justify-content:space-around;
 }
