--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
                                   ". content content content content ."
                                   ". footer footer footer footer .";
     grid-template-columns:5% 15% 20% 30% 25% 5%;
+    font-family: 'Raleway', sans-serif;
 }
 header {
     grid-area: header;
@@ -82,6 +83,7 @@ footer{
 }
 content{
     grid-area:content;
+    display:block;
 }
 .fa, .fab, .fad, .fal, .far, .fas {
     padding-right: 5px;
@@ -118,6 +120,9 @@ content{
     border-radius: 10px 10px;
     box-shadow: 2px 2px#DEEBFF;
 }
+.card img{
+    border-radius:10px 10px 10px 10px;
+}
 .card, a {
     text-decoration: none;
 }
@@ -148,4 +153,8 @@ content{
 }
 .inside{
     margin-left:15px;
+}
+.tete_content{
+    display:flex;
+    justify-content:space-around;
 }
