--- a/index.css
+++ b/index.css
@@ -126,6 +126,9 @@ footer {
     color: white;
     background-color: #0082ff;
     }
+.inscription {
+    color: blue;
+}
 .card {
     color: black;
     background-color: white;
