--- a/index.css
+++ b/index.css
@@ -81,6 +81,9 @@ aside {
 aside h2{
     margin-left:30px;
 }
+aside span, main span, .fa fa-star {
+    color: silver;
+}
 content {
     grid-area: content;
     display: block;
@@ -164,11 +167,11 @@ span p, .inscription {
     color: black;
     background-color: white;
     border: 8px solid white;
-    border-radius: 10px 10px;
+    border-radius: 15px 15px;
     box-shadow: 2px 2px#DEEBFF;
     display:flex;
-    margin-left:70px;
-    width:350px;
+    margin-left:60px;
+    width:365px;
 }
 .card_aside img{
     border-radius:10px 0px 0px 10px;
@@ -230,11 +233,21 @@ span p, .inscription {
     }
     header nav p {
        padding: 0px 25px;
+       border-bottom:4px solid #F2F2F2;
     }
-   section{
-       grid-area:section;
-       margin:auto;
-   }
+    header nav p:hover {
+       border-top: none;
+       border-bottom: 4px solid #0082ff;
+        }
+    section {
+        grid-area: section;
+        margin: auto;
+        margin-top: -30px;
+    }
+    section h3{
+        max-width:250px;
+        width:auto;
+    }
    section nav {
        display: block;
        align-items: baseline;
@@ -247,17 +260,22 @@ span p, .inscription {
     section nav p img {
         padding:5px 5px 5px 5px;
     }
-   aside{
-       grid-area:aside;
-       margin:auto;
-       width:auto;
-   }
-   main{
-       grid-area: main;
-       max-height:2000px;
-       max-width:1500px;
-       margin:auto;
-}
+    aside {
+        grid-area: aside;
+        margin: auto;
+        margin-left: -7px; /*Je met un margin négatif en plus du "auto" pour combler l'espace à gauche*/
+        border-radius: 0px;
+        height:700px;
+        padding-left:20px;
+    }
+    main {
+        grid-area: main;
+        max-height: 2000px;
+        max-width: 1500px;
+        margin: auto;
+        margin-top: 5em; /*Je met un margin top en plus du "auto" pour créer l'espace en haut*/
+        width: auto;
+    }
 main h2, main h4 {
     margin-left:45px;
 }
@@ -267,8 +285,26 @@ main h2, main h4 {
    footer{
        grid-area:footer;
    }
-   .inscription{
-       margin-left:12em;
+   #inscrip{
+       border-bottom:none;
+   }
+    .inscription {
+        margin-left: 12em;
+    }
+    .inscription:hover {
+            color: #0082ff;
+    }
+   #hebergements{
+       margin-left:-10em;
+       text-align:center;
+       width:185px;
+   }
+   #activites{
+       width:185px;
+       text-align:center;
+   }
+   #reservia{
+       margin-bottom:72px;
    }
    #famille{
        float:right;
@@ -306,7 +342,7 @@ main h2, main h4 {
        margin-top: 0px;
        margin-right: -4px;
        height: 30px;
-       width:293px;
+       width:340px;
     }
     #aside_logo {
         margin-left: 7em;
@@ -316,13 +352,16 @@ main h2, main h4 {
         margin-left:25px;
         width: 350px;
     }
-    .block_un{
-       display:block;
-       justify-content:space-around;
-}
+    .block_un {
+        display: block;
+        justify-content: space-around;
+    }
     .block_deux{
       margin-top:20px;
       display:block;
       justify-content:space-around;
 }
+    card_aside {
+        margin-top: 35px;
+    }
 }
